<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textColor="#000000"
        android:fontFamily="@font/muli_bold"
        android:textAlignment="center"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
        android:layout_marginStart="52dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.15"
        android:autofillHints=""
        tools:ignore="LabelFor"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_name"
        android:autofillHints=""
        tools:ignore="LabelFor"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/e_mail"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:textColor="#000000"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/DOB"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:autofillHints=""/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.171"/>

</androidx.constraintlayout.widget.ConstraintLayout>